--- a/docs/python/py_000.md
+++ b/docs/python/py_000.md
@@ -4,7 +4,7 @@ Python és un llenguatge de programació d'alt nivell i propòsit general molt u
 Va ser creat per Guido van Rossum l'any 1991. La seva filosofia de disseny busca llegibilitat en el codi i la seva sintaxi permet utilitzar menys línies de codi de les que seria possible en altres llenguatges com C.
 També proveeix estructures per permetre programes més entenedors tant a petita com a gran escala.
 
-**Python** és un llenguatge de programació **dinàmic i fortament tipat** . Intenament, en Python, tot son **objectes**.
+**Python** és un llenguatge de programació **dinàmic i fortament tipat** . Internament, en Python, tot són **objectes**.
 
 !!!info "L'escriptura **fortament tipada** significa que el tipus d'un valor no canvia de manera inesperada."
 
@@ -24,7 +24,7 @@ Com altres llenguatges de programació dinàmics, Python és usat sovint com un 
 
 !!!note "Text extret de [https://ca.wikipedia.org/wiki/Python][]{target='_blank'}"
 
-Actualment utilitzem la versió de Python 3.x. Hi ha hagut diverses versions:
+Actualment, utilitzem la versió de Python 3.x. Hi ha hagut diverses versions:
 
 * 0.x, del febrer de 1991 al juliol de 1993
 
