--- a/docs/python/py_002.md
+++ b/docs/python/py_002.md
@@ -2,7 +2,7 @@
 
 ## Instal·lació de Python en Windows
 
-Per instal·lar el llenguatge de programació, cal anar a la [pàgina de descàrregues de python][]{target="_blank"}, descarregar la darrera versió pel nostre sistema operatiu i instal·lar-lo.
+Per instal·lar el llenguatge de programació, cal anar a la [pàgina de descàrregues de Python][]{target="_blank"}, descarregar la darrera versió pel nostre sistema operatiu i instal·lar-lo.
 
 | [![py_001.png][]][py_001.png]{target="_blank"} | [![py_002.png][]][py_002.png]{target="_blank"} |
 |:--:|:--:|
@@ -16,14 +16,14 @@ Podem sortir-ne escrivint `exit()`
 
 Per a més informació podem consultar:
 
-* Accés al [tutorial de python][]{target="_blank"}
+* Accés al [tutorial de Python][]{target="_blank"}
 
-* Accés a la [documentació de python][]{target="_blank"}
+* Accés a la [documentació de Python][]{target="_blank"}
 
 
 ## Instal·lació de Visual Studio Code en Windows
 
-Necessitarem un editor per escriure els programes que fem, per això teballarem amb el [Visual Studio Code][]{target="_blank"}, que també descarregarem i instal·larem.
+Necessitarem un editor per escriure els programes que fem, per això treballarem amb el [Visual Studio Code][]{target="_blank"}, que també descarregarem i instal·larem.
 
 [![vsc_001.png][]][vsc_001.png]{target="_blank"}
 
@@ -60,14 +60,14 @@ Per tenir el programes guardats al núvol, utilitzarem l'entorn de [github][]{ta
 | [![git_016.png][]][git_016.png]{target="_blank"} | [![git_017.png][]][git_017.png]{target="_blank"} |
 | [![git_018.png][]][git_018.png]{target="_blank"} | [![git_019.png][]][git_019.png]{target="_blank"} |
 
-Si ara obrim una shell de `CMD` i executem la comanda `git --version` veuremla versió instal·lada i que funciona.
+Si ara obrim una shell de `CMD` i executem la comanda `git --version` veurem la versió instal·lada i que funciona.
 
 [![git_020.png][]][git_020.png]{target="_blank"}
 
 
-[pàgina de descàrregues de python]: https://www.python.org/downloads/   "Python Download"
-[tutorial de python]:               https://docs.python.org/tutorial/   "Tutorial de Python"
-[documentació de python]:           https://docs.python.org/            "Documentació de Python"
+[pàgina de descàrregues de Python]: https://www.python.org/downloads/   "Python Download"
+[tutorial de Python]:               https://docs.python.org/tutorial/   "Tutorial de Python"
+[documentació de Python]:           https://docs.python.org/            "Documentació de Python"
 
 [py_001.png]:        ./img/py_001.png                   "Descàrrega"
 [py_002.png]:        ./img/py_002.png                   "Instal·lació"
