--- a/docs/python/py_002b.md
+++ b/docs/python/py_002b.md
@@ -8,7 +8,7 @@ Per sortir de l'intèrpret, cal escriure `#!py exit()` o bé prémer la combinac
 
 ## Escrivim quelcom
 
-Per escriure qualsevol missatge, nombre, etc utilitzarem la funció [`print()`][print()]{target="_blank"}.
+Per escriure qualsevol missatge, nombre, etc. utilitzarem la funció [`print()`][print()]{target="_blank"}.
 
 ### Exemples de `print()`
 
@@ -26,11 +26,11 @@ print(10 / 3)
 print( 2 > 3)
 print( 2 < 3)
 ```
-Com podeu obeservar, hem escrit diferents tipus de dades.
+Com podeu observar, hem escrit diferents tipus de dades.
 
-* les tres primeres línies escriuen **texte**
+* les tres primeres línies escriuen **text**
 
-* de la línia 4 a la 7, s'escriuen **nombres enters**. La quarta línia escriu un nombre enter directament, les dues següents, el resultat d'una operació de suma i de potència i la setena línia, varis nombres, que especifiquem separant-los per coma.
+* de la línia 4 a la 7, s'escriuen **nombres enters**. La quarta línia escriu un nombre enter directament, les dues següents, el resultat d'una operació de suma i de potència i la setena línia, diversos nombres, que especifiquem separant-los per coma.
 
 * les línies 8 a 10 també escriuen **nombres decimals**.
 
@@ -38,9 +38,9 @@ Com podeu obeservar, hem escrit diferents tipus de dades.
 
 * les dues darreres línies escriuen un valor **booleà**, que només pot ser, cert (`#!py True`) o fals (`#!py False`).
 
-Aquest són bàsicament els tipus de dades amb què treballarem: textes, nombres enters, nombres decimals i valors booleans.
+Aquest són bàsicament els tipus de dades amb què treballarem: textos, nombres enters, nombres decimals i valors booleans.
 
-La funció [`print()`][print()]{target="_blank"} admet altes paràmetres, però potser ara només ens interessen, un *separador* quan afegim més d'un valor a mostrar, per defecte és l'espai, i un *final de línia*, que per defecte és l'*intro*.
+La funció [`print()`][print()]{target="_blank"} admet altres paràmetres, però potser ara només ens interessen, un *separador* quan afegim més d'un valor a mostrar, per defecte és l'espai, i un *final de línia*, que per defecte és l'*intro*.
 
 ```py
 print(1, 2, 3, 4, sep=":")
@@ -74,16 +74,16 @@ print("Això son\ttres columnes\ten un sol string")
 
 ## Variables
 
-Una variable, és un espai de la memòria que utilitzen els llenguatges de programació de referir-se a una informació que volem guardar per utilitzar-la més endavant. A cadascun d'aquests espais de memòria els donem un nom diferent. És el que anomenem **variables**.
+Una variable és un espai de la memòria que utilitzen els llenguatges de programació de referir-se a una informació que volem guardar per utilitzar-la més endavant. A cadascun d'aquests espais de memòria els donem un nom diferent. És el que anomenem **variables**.
 
-En Python **no cal especificar** les variables que utilitzarem ni el tipus de dada que emmagatzemarem en elles. Simplement utilitzem un nom vàlid i li assignem un valor amb l'operador d'assignació `#!py =`.
+En Python **no cal especificar** les variables que utilitzarem ni el tipus de dada que emmagatzemarem en elles. Simplement, utilitzem un nom vàlid i li assignem un valor amb l'operador d'assignació `#!py =`.
 
 ```py
 x = 5
 print(x)
 ```
 
-Una vegada tenim una dada emmagatzemada a memòria, podem accedir-hi amb el seu nom i podem, també, modificar-ne el seu contingut o bé utilitzar-la per altres càlculs.
+Una vegada tenim una dada emmagatzemada a memòria, podem accedir-hi amb el seu nom i podem, també, modificar-ne el contingut o bé utilitzar-la per altres càlculs.
 
 ```py
 x = 5
@@ -95,11 +95,13 @@ x = x + 12
 print("ara x val", x)
 ```
 
-!!!note "En l'exemple anterior podem veure com gaurdem el valor 5 dins la variable `x`. Després aquesta `x` la utilitzem per mostrar-la, operar-la amb un altre valor i fins i tot li modifiquem el seu valor inicial."
+!!!note "En l'exemple anterior podem veure com guardem el valor 5 dins la variable `x`. Després aquesta `x` la utilitzem per mostrar-la, operar-la amb un altre valor i fins i tot li modifiquem el seu valor inicial."
 
 [pàgina de descàrregues de python]: https://www.python.org/downloads/   "Python Download"
 [Visual Studio Code]:   https://code.visualstudio.com/  "VSCode"
 [github]:               https://github.com/             "github.com"
 [git]:                  https://git-scm.com/            "git"
 [print()]:              https://docs.python.org/3/library/functions.html#print  "print()"
+
+
 --8<-- ".acronims.txt"
