--- a/docs/python/py_003.md
+++ b/docs/python/py_003.md
@@ -114,9 +114,9 @@ L'operador mòdul (`%`) retorna el residu de la divisió entera dels dos operand
 2
 ```
 
-#### Exponenciació
+#### Potenciació
 
-L'exponenciació es realitza mitjançant l'operador `**`:
+La potenciació es realitza mitjançant l'operador `**`:
 
 ```py
 >>> 2 ** 3
