--- a/docs/python/py_001.md
+++ b/docs/python/py_001.md
@@ -14,15 +14,15 @@ També és **fortament tipat**, cosa que significa que el tipus no canvia de man
 
 Per instal·lar el llenguatge de programació, cal anar a la [pàgina de descàrregues de python][]{target="_blank"}, descarregar la darrera versió pel nostre sistema operatiu i instal·lar-lo.
 
-Necessitarem un editor per escriure els programes que fem, per això teballarem amb el [Visual Studio Code][]{target="_blank"}, que també caldrà descarregar i instal·lar.
+Necessitarem un editor per escriure els programes que fem, per això treballarem amb el [Visual Studio Code][]{target="_blank"}, que també caldrà descarregar i instal·lar.
 
 Per tenir el programes guardats al núvol, utilitzarem l'entorn de [github][]{target="_blank"} i en local el programa [git][]{target="_blank"}.
 
 ## Mode interactiu
 
-Python és un llenguatge interpretat. L'intèrpret de Python estàndard inclou un mode interactiu en el qual s'escriuen les instruccions, en una mena d'intèrpret d'ordres: les expressions poden ser introduïdes una a una, podent veure's el resultat de la seva avaluació immediatament, cosa que dóna la possibilitat de provar porcions de codi en mode interactiu abans d'integrar-lo com a part d'un programa. Això és útil tant per a les persones que s'estan familiaritzant amb el llenguatge com per als programadors més avançats.
+Python és un llenguatge interpretat. L'intèrpret de Python estàndard inclou un mode interactiu en el qual s'escriuen les instruccions, en una mena d'intèrpret d'ordres: les expressions poden ser introduïdes una a una, podent veure's el resultat de la seva avaluació immediatament, cosa que dona la possibilitat de provar porcions de codi en mode interactiu abans d'integrar-lo com a part d'un programa. Això és útil tant per a les persones que s'estan familiaritzant amb el llenguatge com per als programadors més avançats.
 
-Aquest interpret el cridarem, una vegada instal·lat el llenguatge Python, amb la comanda `python` o `py`, segons la instal·lació.
+Aquest intèrpret el cridarem, una vegada instal·lat el llenguatge Python, amb la comanda `python` o `py`, segons la instal·lació.
 
 
 
