--- a/docs/tkinter/tk_000.md
+++ b/docs/tkinter/tk_000.md
@@ -8,6 +8,35 @@ D'acord amb la documentació de Python, *TK* es descriu a si mateix com l'**úni
 
 Amb el seu ús no cal accedir a les rutines de baix nivell de qualsevol dels sistemes operatius per controlar gràficament la pantalla de les interfícies d'usuari que penses crear. Saber què és *Tkinter* aporta molta facilitat en el desenvolupament de les aplicacions.
 
+El mòdul `tkinter.ttk` ens dona accés al conjunt de widgets temàticos de `Tk`, introduits a *Tk 8.5*. Aquest ens ofereix beneficis adicionals, inclosa la representació de fonts suavitzades en X11 i la transparència de la finestra (que requereix un administrador de finestres de composició en X11).
+
+La idea bàsica de `tkinter.ttk` és separar, en la mesura possible, el comportament d'un giny del codi que implementa la seva aparença.
+
+## Diferències entre `Tk` i `Ttk`
+
+Al llarg del mòdul mirarem de treballar amb `Ttk` ja que és més novedós i permet treballar millor en qualsevol plataforma. Per això caldrà saber diferenciar, quan trobem informació a internet, si estem treballant amb `Tk` o amb `Ttk`.
+
+### Ús de `Ttk`
+
+Per començar a treballar amb `Ttk` cal importar el seu mòdul
+
+```py
+from tkinter import ttk
+```
+
+Per anular els ginys bàsics de Tk, caldrà afegir la importació de `ttk` després de la de `Tk`
+
+```py
+from tkinter import *
+from tkinter.ttk import *
+```
+
+Aquest darrer codi fa que diversos ginys [`tkinter.ttk`][tkinter_ttk] (*Button*, *Checkbutton*, *Entry*, *Frame*, *Label*, *LabelFrame*, *Menubutton*, *PanedWindow*, *Radiobutton*, *Scale* y *Scrollbar*) substitueixin automàticament els ginys `Tk`.
+
+!!!warning "Compte ja que no es treballa de la mateixa manera amb els gins `Tk`i els ginys `ttk`"
+
+    La principal diferència és que les opcions de ginys como `fg`, `bg` i altres, relacionades amb l'estil del giy, ja no existeixen en el ginys de `Ttk`. Cal utilitzar la classe `ttk.Style` per millorar els efectes d'estilo.
+
 ## Elements de *Tkinter*
 
 ### Finestra d'aplicació
@@ -28,7 +57,7 @@ El suport per a *Tkinter* es distribueix per a diversos mòduls. La majoria de l
 
 ```py
 from tkinter import *
-from tkinter import ttk
+from tkinter.ttk import *
 ```
 
 #### La classe `tkinter.Tk`
@@ -47,21 +76,20 @@ Amb això, ja se'ns ha creat, i es mostra, la primera finestra, sense contingut.
 
 ```py linenums="1"
 from tkinter import *
-from tkinter import ttk
+from tkinter.ttk import *
 
 finestra = Tk()
 
-llens = ttk.Frame(finestra, padding = 10)
+llens = Frame(finestra, padding = 10)
 llens.grid()
 
-ttk.Label(llens, text="La primera finestra").grid(column=0, row = 0)
-ttk.Button(llens, text="Sortir", command=finestra.destroy).grid(column = 1, row = 0)
-llens.pack()
+Label(llens, text="La primera finestra").grid(column=0, row = 0)
+Button(llens, text="Sortir", command=finestra.destroy).grid(column = 1, row = 0)
 
 finestra.mainloop()
 ```
 
-Si us hi fixeu bé, els elements no es posen directament a la finestra sinó que cal crear un *llens*, `#!py ttk.Frame(...)` al que li hem dit que disposarem els elements com si tinguéssim una graella `#!py llens.grid()`
+Si us hi fixeu bé, els elements no els posem directament a la finestra sinó que solem crear un *llens*, `#!py Frame(...)` al que li hem dit que disposarem els elements com si tinguéssim una graella `#!py llens.grid()`
 
 Tot seguit hem anat crent *widgets* dins el *Frame*, que a la vegada està dins la *finestra principal* `#!py Tk`.
 
@@ -73,18 +101,17 @@ Per saber les opcions de cada *widget*, cal mirar la [documentació de Tk][]. Pe
 
 ```py hl_lines="9 11 15 16 18 19"
 from tkinter import *
-from tkinter import ttk
+from tkinter.ttk import *
 
 finestra = Tk()
 
-llens = ttk.Frame(finestra, padding = 10)
+llens = Frame(finestra, padding = 10)
 llens.grid()
 
-l1 = ttk.Label(llens, text="La primera finestra")
+l1 = Label(llens, text="La primera finestra")
 l1.grid(column=0, row = 0)
-b1 = ttk.Button(llens, text="Sortir", command=finestra.destroy)
+b1 = Button(llens, text="Sortir", command=finestra.destroy)
 b1.grid(column = 1, row = 0)
-llens.pack()
 ## segona part
 l1["text"] = "Nou missatge"
 b1["text"] = "Apreta'm"
@@ -98,6 +125,7 @@ També hem modificat la opció `text` del botó: [`ttk::button`][ttk_button].
 
 
 [Tkinter]:              https://docs.python.org/es/3/library/tkinter.html               "Tkinter"
+[tkinter_ttk]:          https://docs.python.org/es/3/library/tkinter.ttk.html#module-tkinter.ttk    "tkinter.ttk"
 [tclTK]:                https://docs.python.org/es/3/library/tkinter.html#architecture  "Tcl/tk"
 [documentació de Tk]:   https://www.tcl.tk/man/tcl8.6/TkCmd/contents.htm                "documentació de Tk"
 [ttk_button]:           https://www.tcl.tk/man/tcl8.6/TkCmd/ttk_button.htm              "ttk::button"
