--- a/docs/python/py_009.md
+++ b/docs/python/py_009.md
@@ -52,7 +52,7 @@ titol.upper().strip("I*").title()  # Podem anar combinant diferents mètodes i s
 [`#!py <str>.replace(<substring>, <replacement substring>)`][str.replace]{target="_blank"} retorna una còpia de la cadena amb totes les ocurrències de `<substring>` substituïdes per `<replacement substring>`.
 
 ```py
-frase = "En cap cap cap el que cap en aquest cap"
+dita = "En cap cap cap el que cap en aquest cap"
 dita.replace("a", "@")
 ```
 
