--- a/docs/python/py_011.md
+++ b/docs/python/py_011.md
@@ -62,19 +62,19 @@ Com que les llistes són *mutables*, els mètodes de llista **alteren l'objecte 
 
 ### Eliminem elements
 
-Podem utilitzar `#!py <list>.remove(<item>)` per eliminar un element de la llista. Aquesta funció, llançarà un **`ValueError`** si l'element no està present a la llista.
+Podem utilitzar `#!py <list>.remove(<item>)` per eliminar un element de la llista. Aquesta funció, llançarà un **`ValueError`** si l'element no està present a la llista. Li indiquem el valor de l'element que volem eliminar, no la posició.
 
 ```py
-numeros = [1, 2, 3]
+numeros = [6, 5, 4, 3, 2, 1]
 numeros.remove(2)
-numeros ## Ha de retornar [1, 3]
+numeros ## Ha de retornar [6, 5, 4, 3, 1]
 numeros.remove(2) ## Ara ha de donar error: ValueError: list.remove(x): x not in list
 
 ```
 
 #### Eliminem i retornem elements
 
-Alternativament, podem utilitzar el mètode `#!py <list>.pop(<index>)` per eliminar i retornar alhora un element, per utilitzar-lo.
+Alternativament, podem utilitzar el mètode `#!py <list>.pop(<index>)` per eliminar i retornar alhora un element, per utilitzar-lo. Li indiquem la posició de l'element que ens ha de retornar i eliminar de la llista.
 
 ```py
 lletres = ['a', 'b', 'c', 'd']
@@ -103,7 +103,7 @@ Podem invertir l'ordre dels elements de la llista amb `#!py <list>.reverse()`. A
 ```py
 numeros = [1, 22, 3, 44, 5, 66, 7, 88, 9]
 numeros.reverse()
-numeros  ## Ha de retornar [9, 88, 7, 66, 5, 44, 3, 22, 1]
+numeros  ## Ara serà [9, 88, 7, 66, 5, 44, 3, 22, 1]
 
 ```
 
@@ -112,20 +112,20 @@ Els elements de la llista es poden ordenar al seu lloc mitjançant `#!py <list>.
 ```py
 numeros = [1, 22, 3, 44, 5, 66, 7, 88, 9]
 numeros.sort()
-numeros  ## Ha de retornar [1, 3, 5, 7, 9, 22, 44, 66, 88]
+numeros  ## Ara és [1, 3, 5, 7, 9, 22, 44, 66, 88]
 numeros.sort(reverse = True)
-numeros  ## Ha de retornar [88, 66, 44, 22, 9, 7, 5, 3, 1]
+numeros  ## Ara és [88, 66, 44, 22, 9, 7, 5, 3, 1]
 
 ```
 
-Si no volem que se'ns modifiqui l alllista oriiginal, podem utilitzar la funció `#!py sorted(<list>)` que ens retornarà una còpia ordenada de la llista original i té els mateixos paràmetes que `#!py <list>.sort()`.
+Si no volem que se'ns modifiqui la llista original, podem utilitzar la funció `#!py sorted(<list>)` que ens retornarà una còpia ordenada de la llista original i té els mateixos paràmetes que `#!py <list>.sort()`.
 
 ```py
 numeros = [1, 22, 3, 44, 5, 66, 7, 88, 9]
 numeros_ordenats = sorted(numeros)
-numeros_ordenats        ## Ha de retornar [1, 3, 5, 7, 9, 22, 44, 66, 88]
+numeros_ordenats        ## Conté [1, 3, 5, 7, 9, 22, 44, 66, 88]
 numeros_ordenats_desc = sorted(numeros, reverse = True)
-numeros_ordenats_desc   ## Ha de retornar [88, 66, 44, 22, 9, 7, 5, 3, 1]
+numeros_ordenats_desc   ## Conté [88, 66, 44, 22, 9, 7, 5, 3, 1]
 
 ```
 
@@ -140,7 +140,7 @@ items.index(4)   ## Ha de retornar 1
 items.index(10)  ## Ha de retornar un ERROR ValueError: 10 is not in list
 ```
 
-Per cercar dins un troç de llista, podem afegir els paràmetres `#!py start` i `#!py end`:
+Per cercar dins un troç de llista, podem afegir un paràmetre que indiqui a partir de quina posició cal fer la cerca:
 
 ```py 
 dies = [ "dl", "dt", "dc", "dj", "dv", "ds", "dg" ]
