--- a/docs/python/py_012.md
+++ b/docs/python/py_012.md
@@ -1,144 +1,180 @@
-# Python
+# Python Resum de Llistes
 
-## Bucles / Iteracions
+## [Llistes - `list`][list]
 
-Python té dues construccions per a fer iteracions. [`while`][while]{target="_blank"}  per a una iteració indefinida (**no comptada**) dela que en sabem en quin moment parar amb una comparació, i [`for`][for]{target="_blank"} per a una iteració definida prèviament (**comptada**). Les paraules clau [`break`][break]{target="_blank"} i [`continue`][continue]{target="_blank"} ajuden a personalitzar el comportament del bucle. [`range()`][range]{target="_blank"} i [`enumerate()`][enumerate]{target="_blank"} ajuden amb el recompte de bucles i la indexació.
+Una [`list`][list] és una col·lecció d'elements ordenats. 
 
-### [`while`][while]{target="_blank"}
+Els elements d'una llista poden ser de *qualsevol tipus*, i no cal que tots els elements de la llista siguin del mateix tipus, així doncs, podem tenir *llistes heterogènies*.
 
-Utilitzarem l'estructura [while] quan el fet de deixar de repetir-se el bloc de codi, sigui una condició que pot esdevenir al principi o en qualsevol moment del bloc repetitiu.
+## Construcció d'una llista
 
-Un bucle `while` es continuarà executant mentre l'expressió que li posem s'avaluï com a `True` en un context booleà; en el moment en què s'avaluï com a `False`, deixarà d'executar-se.
+Podem crear llistes buides o plenes.
 
-!!!note "L'estructura repetitiva executarà les instruccions una vegada hagi començat i no sortirà de la iteració fins que tornem a avaluar l'expressió, i aquesta sigui `False`"
-
-```py
-a = 1
-while a < 10:
-    print(a)
-    a = a + 1
-    print("S'executa amb valor de a = ", a)
+```py title="Llistes buides"
+llista_buida1 = []
+llista_buida2 = list()
 ```
 
-### [`for`][for]{target="_blank"}
-
-En *Python* utilitzem l'estructura `for` per recórrer **tots els elements** d'un [objecte iterable][]{target="_blank"}. Podem dir que en *Python* equival a **per cada element de...**
-
-```py
-dies = ["dl", "dt", "dc", "dj", "dv", "ds", "dg"]
-for d in dies:
-    print(d)
-```
-
-### [Objecte iterable][objecte iterable]{target="_blank"} de seqüència [`range`][range]{target="_blank"}
-
-Quan no tenim un iterable específic, la funció [`range()`][range]{target="_blank"} s'utilitza com a comptador de bucles. [`range()`][range]{target="_blank"} requereix un valor de tipus enter, `int`, que indica quantes vegades volem repetir la seqüència. Opcionalment pot prendre dos valors que indicarien el primer valor de la seqüència i el valor posterior al que volem que s'aturi la seqüència. D'aquesta manera, podem utilitzar el nombre aportat per [`range()`][range]{target="_blank"} dins el nostre *bucle*. Cal tenir en compte que [`range()`][range]{target="_blank"} no és només un iterador i es pot utilitzar en molts contextos sense bucles on es necessita generar una seqüència de números.
-
-```py
-for i in range(10):
-    print(f"Frase a repetir ({i})")
-```
-
-```py
-for numero in range(1,7):
-    if numero % 2 == 0:
-        print(f"{numero} és parell")
-    else:
-        print(f"{numero} és senar")
-```
-
-Si a [`range()`][range]{target="_blank"} li especifiquem un tercer paràmetre, seria l'increment que volem d'un nombre al següent:
-
-```py
-for numero in range(3,50, 3):
-    if numero % 2 == 0:
-        print(f"{numero} és parell")
-    else:
-        print(f"{numero} és senar")
-```
-
-### Valors i índexs amb [`enumerate()`][enumerate]{target="_blank"}
-
-Si es necessiten tant *valors com índexs*, el sistema integrat [`enumerate(<iterable>)`][enumerate]{target="_blank"} retornarà parells de l'iterador sobre `(index, value)`:
-
-```py
-dies = ["dl", "dt", "dc", "dj", "dv", "ds", "dg"]
-for (posicio, dia) in enumerate(dies):
-    print(f"{dia} es el dia {posicio + 1} de la setmana")
-```
-
-Per defecte, [`enumerate()`][enumerate]{target="_blank"} comença amb el valor 0, però podem passar-li un paràmetre per indicar-li un altre valor:
-
-```py
-dies = ["dl", "dt", "dc", "dj", "dv", "ds", "dg"]
-for (posicio, dia) in enumerate(dies, start = 1):
-    print(f"{dia} es el dia {posicio} de la setmana")
-```
-
-### Alteració del comportament del bucle
-
-#### [`continue`][continue]{target="_blank"}
-
-La paraula clau [`continue`][continue]{target="_blank"} "*podem*" utilitzar-la per passar directament al següent cicle de la iteració sense finalitzar l'actual.
-
-```py
-for a in range(1, 11):
-    print(f"tractem el valor {a}")
-    if a % 2 == 1:
-        continue
-    print(f"{a} és parell")
-```
-
-#### [`break`][break]{target="_blank"}
-
-La paraula clau [`break`][break]{target="_blank"} "*podem*" utilitzar-la per sortir directament de l'estructura repetitiva sense executar cap altra instrucció més del bloc iteratiu.
-
-```py
-llista = range(1000)
-for a in llista:
-    print(f"tractem el valor {a}")
-    if a >= 10:
-        break
-```
-
-### [`else`][else]{target="_blank"} en iteracions
-
-La clàusula [`else`][else]{target="_blank"} en iteracions **és exclusiva de Python** i es pot utilitzar per a accions de *conclusió* o *conclusió* **quan la iteració s'ha esgotat**. Les instruccions del bloc `else` no s'executaran si la iteració acaba amb un `break`:
-
-```py
-llista = range(8)
-for a in llista:
-    print(f"tractem el valor {a}")
-    if a >= 10:
-        break
-else:
-    print("Hem recorregut tots els elements")
-
-
-llista = range(1000)
-for a in llista:
-    print(f"tractem el valor {a}")
-    if a >= 10:
-        break
-else:
-    print("Hem recorregut tots els elements")
+```py title="Llistes plenes"
+llista_plena1 = ["vermell"]
+llista_plena2  = ["vermell", "dilluns", 12]
+llista_plena3 = [
+    [5, 3, 6, 2],
+    [7, 5, 8, 5],
+    [3, 9, 4, 2],
+    [8, 7, 6, 6]
+ ]
 ```
 
 
-!!!quote "Extret de [https://exercism.org/tracks/python/concepts/loops][]{target="_blank"}"
+```py title="Llistes a partir de ..."
+### llista buida
+llista_buida = list()   ## Esdevé []
+
+### llista a partir d'una tupla
+llista_de_tupla = list(("peix", "mamífer", "ocell"))   ## Esdevé ['peix', 'mamífer', 'ocell']
+
+### llista a partir d'una cadena de caràcters - string
+llista_de_string = list("aeiouAEIOU")   ## Esdevé ['a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U']
+
+### llista a partir d'un diccionari - agafa les claus
+llista_de_diccionari_claus = list({"peix": "platejat", "mono": "marró"})   ## Esdevé ['peix', 'mono']
+
+### llista a partir d'un diccionari - valors
+llista_de_diccionari_valors = list({"peix": "platejat", "mono": "marró"}.values())   ## Esdevé ['platejat', 'marro']
+```
+
+## Accés als elements
+
+Per accedir als elements podem utilitzar-ne la posició que ocupen dins la llista, comptant a partir del primer, que serà la posició 0 o del darrer que ocupa la posició -1.
+
+```py title="Accés a un element"
+vocals = "aeiou"
+llista_vocals = list(vocals)
+
+vocals[0]        ## fa referència a la a
+vocals[-1]       ## fa referència a la u
+vocals[2]        ## fa referència a la i
+vocals[-3]       ## fa referència a la i
+vocals[1]        ## fa referència a la e
+vocals[-2]       ## fa referència a la o
+```
+
+```py title="Accés a un rang d'elements"
+vocals = "aeiouAEIOUàèìòùÀÈÌÒÙáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ"
+llista_vocals = list(vocals)
+vocals[:5]     ## vocals minúscules
+vocals[0:5]    ## vocals minúscules
+vocals[5:10]   ## vocals majúscules
+vocals[0::5]   ## vocals a
+vocals[30:]    ## vocals dièresi
+vocals[2::5]   ## vocals i
+```
+
+## Treball amb llistes
+
+Bàsicament, per accedir als elements d'una llista, utilitzarem l'estructura [`#!py for`][for]. Els algorismes sobre llistes, s'utilitzen en dos termes diferents:
+
+* per fer un **recorregut**: quan per una o altra raó necessitem tractar **tots** els elements de la llista
+
+* per fer una **cerca**: quan necessitem trobar un element determinat, que pot ser per un valor concret o perquè cumpleixi una certa condició. En cas de trobar-lo ja no caldrà continuar buscant. Pot ser que la cerca no doni fruit i per tant no trobem l'element buscat.
+
+### Recorreguts en llistes
+
+Per recórrer **tots** els element d'una llista utilitzarem l'estructura [`#!py for`][for]. Veiem-ne alguns exemples:
+
+```py title="Mostrem tots els elements d'una llista"
+colors = ['vermell', 'taronja', 'groc', 'verd', 'blau', 'lila']
+for color in colors:
+    print(color)
+
+```
+
+```py title="Comptem el nombre de notes aptes"
+notes = [4, 7, 2, 8, 9, 10, 3, 4, 9, 4, 2, 5, 8]
+aptes = 0
+for nota in notes:
+    if nota > 5:
+        aptes = aptes + 1
+
+print(f"Tenim {aptes} notes aptes")
+
+```
+
+```py title="Mitjana de temperatures"
+temp_jul_2024 = [
+    ['01-07-2024', 27.0, 18.1],
+    ['02-07-2024', 28.1, 17.5],
+    ['03-07-2024', 28.5, 18.9],
+    ['04-07-2024', 30.0, 16.9],
+    ['05-07-2024', 30.4, 19.1],
+    ['06-07-2024', 28.6, 19.6],
+    ['07-07-2024', 29.7, 18.5],
+    ['08-07-2024', 31.3, 17.9],
+    ['09-07-2024', 33.6, 20.1],
+    ['10-07-2024', 33.0, 19.2],
+    ['11-07-2024', 35.3, 21.7],
+    ['12-07-2024', 29.2, 20.2],
+    ['13-07-2024', 29.7, 17.4],
+    ['14-07-2024', 32.6, 18.5],
+    ['15-07-2024', 32.9, 20.8],
+    ['16-07-2024', 32.9, 21.3],
+    ['17-07-2024', 33.4, 18.9],
+    ['18-07-2024', 36.0, 19.9],
+    ['19-07-2024', 36.1, 23.6],
+    ['20-07-2024', 37.2, 21.3],
+    ['21-07-2024', 27.3, 17.0],
+    ['22-07-2024', 33.1, 16.9],
+    ['23-07-2024', 35.4, 17.8],
+    ['24-07-2024', 34.2, 21.1],
+    ['25-07-2024', 33.5, 21.6],
+    ['26-07-2024', 34.8, 21.8],
+    ['27-07-2024', 34.9, 20.9],
+    ['28-07-2024', 36.2, 21.7],
+    ['29-07-2024', 38.6, 19.2],
+    ['30-07-2024', 39.1, 22.6]
+]
+
+if len(temp_jul_2024) > 0:
+    suma_minimes = 0
+    suma_maximes = 0
+    dies_minima_20 = 0
+    temperatura_maxima = temp_jul_2024[0][1]
+    temperatura_minima = temp_jul_2024[0][2]
+    for dada in temp_jul_2024:
+        if dada[2] > 20:
+            dies_minima_20 = dies_minima_20 + 1
+        if dada[1] > temperatura_maxima:
+            temperatura_maxima = dada[1]
+        elif dada[1] < temperatura_minima:
+            temperatura_minima = dada[1]
+        if dada[2] > temperatura_maxima:
+            temperatura_maxima = dada[2]
+        elif dada[2] < temperatura_minima:
+            temperatura_minima = dada[2]
+        suma_maximes = suma_maximes + dada[1]
+        suma_minimes = suma_minimes + dada[2]
+    print(f"Temperatura mínima: {temperatura_minima}.")
+    print(f"Temperatura màxima: {temperatura_maxima}.")
+    print(f"Dies amb una mínima superior a 20: {dies_minima_20}.")
+    print(f"Mitjana de tempetarures mínimes {suma_minimes / len(temp_jul_2024):.2f}.")
+    print(f"Mitjana de tempetarures màximes {suma_maximes / len(temp_jul_2024):.2f}.")
+
+```
 
 
-[https://exercism.org/tracks/python/concepts/loops]:  https://exercism.org/tracks/python/concepts/loops "Extret de..."
-
-[while]:                https://docs.python.org/reference/compound_stmts.html#the-while-statement       "while"
-[for]:                  https://docs.python.org/reference/compound_stmts.html#the-for-statement         "for"
-[continue]:             https://docs.python.org/reference/simple_stmts.html#continue                    "continue"
-[break]:                https://docs.python.org/reference/simple_stmts.html#break                       "break"
-[range]:                https://docs.python.org/library/stdtypes.html#range                             "range"
-[enumerate]:            https://docs.python.org/library/functions.html#enumerate                        "enumerate"
-[objecte iterable]:     https://docs.python.org/glossary.html#term-iterable                             "objecte iterable"
-[range]:                https://docs.python.org/library/stdtypes.html#range                             "range"
-[else]:                 https://docs.python.org/3/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops  "else en iteracions"
+[list]:                 https://docs.python.org/library/stdtypes.html#list                              "Llistes - list"
+[tuple]:                https://docs.python.org/library/stdtypes.html#tuple                             "tuple"
+[dict]:                 https://docs.python.org/library/stdtypes.html#dict                              "dict"
+[set]:                  https://docs.python.org/library/stdtypes.html#set                               "set"
+[seqüència]:            https://docs.python.org/library/stdtypes.html#sequence-types-list-tuple-range   "tipus de seqüències"
+[matrius dinàmiques]:   https://en.wikipedia.org/wiki/Dynamic_array                                     "matrius dinàmiques"
+[collections.deque]:    https://docs.python.org/library/collections.html#collections.deque              "collections.deque"
+[array]:                https://docs.python.org/library/array.html                                      "array.array"
+[iterador]:             https://docs.python.org/glossary.html#term-iterator                             "iterador"
+[col·leccions]:         https://docs.python.org/library/collections.html                                "col·leccions"
+[deque]:                https://docs.python.org/library/collections.html#collections.deque              "deque"
+[for]:                  https://docs.python.org/3/reference/compound_stmts.html#the-for-statement       "for"
 
 
 --8<-- ".acronims.txt"
