--- a/docs/python/py_006.md
+++ b/docs/python/py_006.md
@@ -18,7 +18,8 @@ if primeraIP <= 255:
 ```
 
 ```py
-valor per la IPv4 vàlid  # Retorna ```
+valor per la IPv4 vàlid  # Retorna 
+```
 
 Quan es combina amb `#!py else`, s'executarà un bloc de codi opcional quan la condició original avaluï `#!py False`.
 
@@ -34,7 +35,8 @@ else:
 ```
 
 ```py
-valor per la IPv4 NO vàlid  # Retorna ```
+valor per la IPv4 NO vàlid  # Retorna
+```
 
 `#!py elif` permet múltiples avaluacions/branques.
 
@@ -55,7 +57,8 @@ else:
 ```
 
 ```py
-xarxa de Classe D o superior  # Retorna ```
+xarxa de Classe D o superior  # Retorna
+```
 
 Les [operacions][operadors booleans]{target="_blank"} i [comparacions][operadors de comparació]{target="_blank"} booleanes es poden combinar amb condicionals per a proves més complexes:
 
