--- a/docs/python/py_010.md
+++ b/docs/python/py_010.md
@@ -48,7 +48,7 @@ dies_de_la_setmana = [
 ]
 ### Cada estructura de dades està en la seva pròpia línia per ajudar a aclarir què són.
 dades_anidades = [
-    {"peix": "platejat", "mono": "marró", "loro": "gris"},
+    {"peix": "platejat", "mono": "marró", "lloro": "gris"},
     ("peix", "mamífer", "ocell"),
     ['aigua', 'jungla', 'cel']
 ]
