--- a/docs/python/py_010_b.md
+++ b/docs/python/py_010_b.md
@@ -50,6 +50,7 @@ for a in range(10):
 ```
 
 Podem utilitzar l'índex, a l'exemple anterior la variable `a` dins el programa
+
 ```py
 taula = 4
 print("Taula del", taula)
@@ -58,6 +59,42 @@ for a in range(1, 13):
     print(f"{taula} x {a:2d} = {producte:3d}")
 
 ```
+
+## Accedim als elements d'una llista
+
+Quan accedim als elements d'una llista, amb l'estructura `for`
+
+```py title="Accés als elements d'una llista sense poder modificar-los"
+llista = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]  ## o bé llista = list(range(1, 11))
+for a in llista:
+    a = a + 1
+
+print()
+
+for a in llista:
+    print(a, end=" ")
+
+print()
+```
+
+**no podem modificar-ne els elements**.
+
+Per a poder modificar els elements, cal accedir a ells per posició. La millor forma de fer-ho serà utilitzant el tipus `range` de la següent forma:
+
+```py title="Accés als elements d'una llista podent modificar-los"
+llista = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]  ## o bé llista = list(range(1, 11))
+for i in range(len(llista)):
+    llista[i] = llista[i] * 10
+
+print()
+
+for a in llista:
+    print(a, end=" ")
+
+print()
+```
+
+Ara **sí** hem accedit als elements de la llista i els hem pogut modificar ja que tenim l'accés a cada element `llista[i]`.
 
 
 [range]:                 https://docs.python.org/3/library/stdtypes.html#range                              "El tipus range"
