--- a/docs/python/py_020.md
+++ b/docs/python/py_020.md
@@ -18,6 +18,12 @@ Per a crear i definir una funció utilitzarem la següent estructura:
 
 !!!tip "Cal tenir en compte que en Python, que és 100% orientat a Objecte, les funcions i procediments són mètodes de la Classe principal. Però, si no definim Classes, no ens hem de preocupar."
 
+Els procediments i funcions existeixen en els llenguatges de programació per tal de seguir:
+
+* el *principi de reutilització*, que ens diu que si tenim un tro de codi repetit en moltes parts del programa, la millor solució és convertir-lo en procediment o funció. Això ens evita tenir codi repetit, i en cas d'haver de modificar-lo, fer-ho una sola vegada.
+
+* el *principi de modularitat*, que defensa que, en comptes d'escriure moltes línies de codi per a una tasca determinada, és millor crear funcions o procediments que agrupin certes funcionalitats específicas, fent que el codi resultant sigui més fàcil de llegir.
+
 ## Procediments
 
 Podem dir que un procediment és un tros de codi que podem executar quan ens interessi i, per tant, cal posar-li un nom. Aquest nom el definim amb la paraula clau `#!py def`. Veurem la creació i ús de procediments a través d'exemples.
@@ -51,7 +57,7 @@ Fixeu-vos com li podem **passar valors** per tal que s'utilitzin dins el procedi
 def saluda(nom, missatge):
     print(missatge, nom)
 
-saluda("Què tal", "Manel")
+saluda("Manel", "Què tal")
 
 salutacions = ["Hola", "Bon dia", "Adéu"]
 noms = ["Maria", "Pau", "Carla", "Clara", "David", "Joan", "Anna"]
@@ -59,8 +65,68 @@ for i, nom in enumerate(noms):
     saluda(nom, salutacions[i % len(salutacions)])
 ```
 
+Als procediments, si cal, els podem definir valors per defecte en algun paràmetre. Solem deixar, en primer lloc, aquells paràmetres que no tenen valor per defecte. Després posarem els que tenen valor per defecte, entenent que el valor és òpcional.
 
+```py title="Procediment que escriu un missatge i un nom"
+def saluda(nom, missatge = "Hola"):
+    print(missatge, nom)
 
+saluda("Manel")
+
+salutacions = ["Hola", "Bon dia", "Adéu"]
+noms = ["Maria", "Pau", "Carla", "Clara", "David", "Joan", "Anna"]
+for i, nom in enumerate(noms):
+    if i < len(salutacions):
+        saluda(nom, salutacions[i])
+    else:
+        saluda(nom)
+```
+
+D'aquesta manera, qualsevol paràmetre que tingui valor per defecte, no cal que el passem, però **sí estem obligats a passar un valor per cada paràmetre que no tingui valor per defecte**.
+
+En *Python*, podem passar els paràmetres, asssignant-li el nom, en qualsevol ordre, en cas contrari, els paràmetres s'assignen segons la posició que ocupen.
+
+```title="Paràmetres per nom"
+def saluda(nom, missatge = "Hola"):
+    print(missatge, nom)
+
+saluda(nom="Manel")
+saluda(nom="Maria", missatge = "Què tal")
+saluda(missatge = "Bon dia", nom="Pol")
+saluda("Lidia", missatge="Bona nit")
+```
+
+I per últim, en *Python*, podem definir un paràmetre com indefinit, és a dir, com que ens poden passar tants paràmetres com vulguin i llavors aquell que definim amb l'asterisc, esdevé una **tupla** de paràmetres.
+
+```title="Molts paràmetres en un de sol"
+def escriu(primer, *altres):
+    print(type(altres))
+    for a in altres:
+        print(a, end=" ")
+    print("El primer era ->", primer)
+
+escriu(1)
+escriu(1, 3)
+escriu(1, 3, 4, 3, 7, 9, 7, 8, 1, 2, 5, 6, 7, 10)
+```
+
+De la mateixa manera que podem passar un munt de paràmetres, sense nom, podem passar un munt de paràmetres amb nom, i rebre'ls al procediment com si fóssin un **diccionari** (**<dict>**). El funcionament seria el següent:
+
+```title="Molts paràmetres per nom"
+def escriu(primer, **altres):
+    for clau, valor in altres.items():
+        print(f"(\"{clau}\": {valor})", end=" ")
+    print("El primer era ->", primer)
+
+escriu(1)
+escriu(1, a=4)
+escriu(1, a=3, z=5)
+escriu(1, a=3, b=4, c=3, d=7, e=9, f=7, g=8, h=1, i=2, j=5, k=6, l=7, m=10)
+```
+
+!!!note "Aquest tipus de paràmetre ens anirà bé quan treballem amb diccionaris"
+
+    Per exemple, a l'accedir a registres d'una base de dades.
 
 
 [definint funcions]:        https://docs.python.org/tutorial/controlflow.html#defining-functions            "Definint funcions"
