--- a/docs/python/py_014.md
+++ b/docs/python/py_014.md
@@ -83,7 +83,7 @@ while numero < 1 or numero > 10:
     numero = float(input("ERROR: Entra un valor entre 1 i 10 -> "))
 ```
 
-En aquest cas, funciona igual que l'anterior, però ... quan s'executa l'`else` que haviem posat al principi? El codi de l'`else` **s'executa quan sortim de forma normal (sense [`break`][break]). De manera que podem saber si ha anat bé escrivint algun codi en aquest apartat i per tant, per exemple, tenint una variable booleana que indiqui si tot és correcte.
+En aquest cas, funciona igual que l'anterior, però ... quan s'executa l'`else` que haviem posat al principi? El codi de l'`else` s'executa quan sortim de forma normal (sense [`break`][break]). De manera que podem saber si ha anat bé escrivint algun codi en aquest apartat i per tant, per exemple, tenint una variable booleana que indiqui si tot és correcte.
 
 ```py title="Comprovem mentre sigui incorrecte amb break i else" hl_lines="6 7 10 11"
 MAXIM_INTENTS = 3
