Solucions Exercicis Iteracions01

--- a/docs/python/py_017.md
+++ b/docs/python/py_017.md
@@ -1,62 +1,94 @@
 # Python
 
-## Estructures de repetició: Seqüències
+## Estructures de repetició: Finestres
 
-Parlem de **seqüències** quan tenim un conjunt d'elements del mateix tipus a analitzar:
+Parlem de **finestres** quan, al tractar un conjunt d'elements, necessitem *recordar* dades d'alguns elements anteriors. Segons el nombre d'elements a recordar, més gran o petit serà el tamany de la *finestra*.
 
-Un problema de seqüències serà del tipus: *una sèrie de ... acabada en ...*
+Una finestra és una **variant de la cerca** on es necessita tractar més d’un element Simultàneament (comprovar, dins la sèrie completa, una subsèrie d’elements).
 
-Per poder plantejar una seqüència, tots els elements han de ser  del mateix tipus i hi ha d'haver un element suficientment especial que ens indiqui el final de la seqüència. També podem tenir tots els elements guardats en una llista o semblant.
+Un problema de seqüències serà del tipus:
+*donada una sèrie de números acabada en zero, dir si no té més de X valors seguits creixents.*
 
-Sobre aquest conjunt d'elements solem fer dos tipus d'accés: *Recorregut* i *Cerca*.
+* Hem d’analitzar sempre un rang de valors, si no es compleix la condició he d'arribar al final (zero), però si hi ha un rang que compleix la condició ja puc parar i dir que sí.
 
-### Recorregut
+* Acostuma a ser un bucle, i al final hem de preguntar si hem trobat o no el que buscàvem. (perquè hem deixat d’iterar?)
 
-Hem d'arribar necessàriament al final de la sèrie per trobar la solució. Per exemple:
+#### Exemples de finestres
+
+A l'haver de tractar dades, *recordant* els valors anteriors, hi ha diferents tècniques per arribar a tractar els primers elements.
+
+**Recordant els tres valors**
+
+```py title="Trobar si hi ha més de 3 valors seguits creixents"
+numero_ant_ant = int(input("Entra un numero"))
+if numero_ant_ant != -1:
+    numero_ant = int(input("Entra un numero"))
+    if numero_ant != -1:
+        numero = int(input("Entra un numero"))
+        ## Ara ja podem tractar la resta de números
+        while numero != -1:
+            if numero_ant_ant < numero_ant < numero:
+                trobat = True
+                break
+            else:
+                numero_ant_ant = numero_ant
+                numero_ant = numero
+                numero = int(input("Entra un numero"))
+        else:
+            trobat = False
+    else:
+        trobat = False
+else:
+    trobat = False
+if trobat:
+    print("Sí hi ha tres números seguits creixents")
+else:
+    print("No hi ha tres números seguits creixents")
+```
+
+**Comptant els creixents que porto _seguits_**
+
+```py title="Trobar si hi ha més de 3 valors seguits creixents"
+numero = int(input("Entra un numero"))
+## Per tal que la primera comprovació al while funcioni, numero_ant necessita un valor 
+## que no cumpleixi
+numero_ant = numero ## o qualsevol valor major que numero
+seguits = 1
+while numero != -1:
+    if numero_ant < numero:
+        seguits = seguits + 1
+        if seguits == 3:
+            break
+    else:
+        seguits = 1 ## cal reiniciar el recompte
+    numero_ant = numero
+    numero = int(input("Entra un numero"))
+if seguits == 3:
+    print("Sí hi ha tres números seguits creixents")
+else:
+    print("No hi ha tres números seguits creixents")
+```
     
-* En una sèrie de números acabada en zero, calcular el major.
-
-* En una frase acabada en punt, comptar el nombre de vocals.
-
-Acostuma a ser un bucle, i al final del recorregut ja tenim el resultat.
-
-L'algorisme que solem seguir és:
-
-```py
-## demanem el primer element
-while no_sigui_el_que_marca_fi:
-    ## Tractem l'element
-    ## Demanem el següent element
-```
-
-#### Exemples de recorreguts
-
-```py title="Mitjana d'unes notes entrades al moment"
-## demanem el primer element
-suma = 0
-quants = 0
-nota = float(input("Entra una nota -> "))
-while nota != -1:
-    ## Tractem l'element
-    suma = suma + nota
-    quants = quants + 1
-    ## Demanem el següent element
-    nota = float(input("Entra una nota -> "))
-
-print("La mitjana de notes és", suma/quants)
-```
-
 En el cas de guardar les dades en una llista, ens estalviem l'entrada de les dades. Només tractem les dades dins la iteració. Però abans cal inicialitzar algunes altres dades.
 
-```py title="Mitjana d'unes notes guardades en una llista"
+```py title="Trobar si hi ha més de 3 valors seguits creixents"
 ## demanem el primer element
-notes = [6.7, 3.4, 9.8, 7.6, 4.5]
-suma = 0
-for nota in notes:
-    ## Tractem l'element
-    suma = suma + nota
-
-print("La mitjana de notes és", suma/len(notes))
+valors = [6, 7, 3, 4, 9, 8, 7, 6, 4, 5]
+seguits = 1
+## cal assegurar-se que hi ha dades a la llista per accedir al primer element
+if len(valors) >= 1:
+    anterior = valors[0]
+for actual in valors:
+    if actual > anterior:
+        seguits = seguits + 1
+        if seguits == 3:
+            break
+    else:
+        seguits = 1 ## cal reiniciar el recompte
+if seguits == 3:
+    print("Sí hi ha tres números seguits creixents")
+else:
+    print("No hi ha tres números seguits creixents")
 ```
 
 ### Cerca
