--- a/docs/python/py_014.md
+++ b/docs/python/py_014.md
@@ -87,11 +87,11 @@ En aquest cas, funciona igual que l'anterior, però ... quan s'executa l'`else` 
 
 ```py title="Comprovem mentre sigui incorrecte amb break i else" hl_lines="6 7 10 11"
 MAXIM_INTENTS = 3
-validat = False
 numero = float(input("Entra un valor entre 1 i 10 -> "))
 intents = 1
 while numero < 1 or numero > 10:
     if intents == MAXIM_INTENTS:
+        validat = False
         break
     intents = intents + 1
     numero = float(input("ERROR: Entra un valor entre 1 i 10 -> "))
@@ -105,7 +105,10 @@ else:
 ```
 
 Fixeu-vos com, amb el [`break`][break] i l'`else`, podem arribar a saber com hem sortit de l'estructura [`while`][while].
-!!!tip "També podriem haver posat `validat = True` al principi i dins l'`if`, just abans del break, assignar `validat = False`."
+
+!!!tip "Podriem haver posat `validat = False` abans d'iniciar el `while` i al `else` assignar `validat = True`."
+
+!!!tip "Podriem haver posat `validat = True` abans d'iniciar el `while` i, just abans del break, assignar `validat = False`."
 
 ### Entrada de dades
 
