--- a/docs/python/py_010.md
+++ b/docs/python/py_010.md
@@ -1,8 +1,8 @@
 # Python
 
-## [Llistes - `list`][list]{target="_blank"}
+## [Llistes - `list`][list]
 
-Una [`list`][list]{target="_blank"} és una col·lecció **mutable** d'elements en seqüència. Com la majoria de col·leccions (vegeu els elements integrats [`tuple`][tuple]{target="_blank"}, [`dict`][dict]{target="_blank"} i [`set`][set]{target="_blank"}), les llistes poden contenir referències a qualsevol tipus de dades (o múltiples), incloses altres llistes. Com qualsevol [seqüència][]{target="_blank"}, es pot accedir als elements mitjançant un índex `base0` des de l'esquerra i un índex `base1` des de la dreta.
+Una [`list`][list] és una col·lecció **mutable** d'elements en seqüència. Com la majoria de col·leccions (vegeu els elements integrats [`tuple`][tuple], [`dict`][dict] i [`set`][set]), les llistes poden contenir referències a qualsevol tipus de dades (o múltiples), incloses altres llistes. Com qualsevol [seqüència][], es pot accedir als elements mitjançant un índex `base0` des de l'esquerra i un índex `base1` des de la dreta.
 
 Les llistes es poden copiar totalment o parcialment mitjançant la notació de porcions o `#!py <list>.copy()`.
 
@@ -16,13 +16,13 @@ Les llistes admeten operacions de seqüències comunes i mutables com ara `min()
 
     quan volem accedir tant l'índex de l'element com el valor de l'element.
 
-Les llistes s'implementen com a [matrius dinàmiques][]{target="_blank"}, i s'utilitzen més sovint per emmagatzemar grups de dades similars (cadenes, números, conjunts, etc) de longitud desconeguda (el nombre d'entrades es pot expandir o reduir arbitràriament).
+Les llistes s'implementen com a [matrius dinàmiques][], i s'utilitzen més sovint per emmagatzemar grups de dades similars (cadenes, números, conjunts, etc) de longitud desconeguda (el nombre d'entrades es pot expandir o reduir arbitràriament).
 
 L'accés als elements, comprovació de la pertinença mitjançant `#!py in`, o afegir elements *al final* d'una llista són operacions molt eficients.
 
-Afegir *al principi*, o afegir al mig d'una llista són operacions menys eficients ja que requereix desplaçar tots els elements per mantenir l'ordre. Per a una estructura de dades similar que admet una memòria eficient appends/pops des d'ambdós costats, cal utilitzar [collections.deque][]{target="_blank"}, que té aproximadament el mateix rendiment *O(1)* en qualsevol direcció.
+Afegir *al principi*, o afegir al mig d'una llista són operacions menys eficients ja que requereix desplaçar tots els elements per mantenir l'ordre. Per a una estructura de dades similar que admet una memòria eficient `append`/`pop` des d'ambdós costats, cal utilitzar [collections.deque][], que té aproximadament el mateix rendiment *O(1)* en qualsevol direcció.
 
-Com que *les llistes són **mutables*** i poden contenir referències a objectes Python arbitraris, també ocupen més espai a la memòria que un [`array.array`][array]{target="_blank"} o una [`tuple`][tuple]{target="_blank"} (que és immutable) de la mateixa longitud. Tot i això, les *llistes* són una estructura de dades extremadament **flexible** i **útil** i molts mètodes i operacions integrades a Python produeixen llistes com a sortida.
+Com que *les llistes són **mutables*** i poden contenir referències a objectes Python arbitraris, també ocupen més espai a la memòria que un [`array.array`][array] o una [`tuple`][tuple] (que és immutable) de la mateixa longitud. Tot i això, les *llistes* són una estructura de dades extremadament **flexible** i **útil** i molts mètodes i operacions integrades a Python produeixen llistes com a sortida.
 
 ## Construcció
 
@@ -48,7 +48,7 @@ dies_de_la_setmana = [
 ]
 ### Cada estructura de dades està en la seva pròpia línia per ajudar a aclarir què són.
 dades_anidades = [
-    {"peix": "platejat", "mono": "marró", "loro": "gris"},
+    {"peix": "platejat", "mono": "marró", "lloro": "gris"},
     ("peix", "mamífer", "ocell"),
     ['aigua', 'jungla', 'cel']
 ]
@@ -75,7 +75,7 @@ llista_de_diccionari_valors = list({"peix": "platejat", "mono": "marró"}.values
 
 ## Accés als elements
 
-Es pot accedir als elements dins de les llistes (així com als elements d'altres tipus de seqüències, com ara `str` i `tuple`), mitjançant la notació de claudàtors `[]`. Els índexs poden ser de esquerra--> dreta (a partir de zero) o dreta--> esquerra (a partir de -1).
+Es pot accedir als elements dins de les llistes (així com als elements d'altres tipus de seqüències, com ara `str` i `tuple`), mitjançant la notació de claudàtors `[]`. Els índexs poden ser de esquerra--> dreta (a partir de zero) o dreta--> esquerra (a partir de -1). Mirem la paraula **`PYTHON`**.
 
 | | P | Y | T | H | O | N |
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -96,7 +96,7 @@ tres_laborables = dies[0:5:2]       ## Esdevé ['dl', 'dc', 'dv']
 
 ## Treballar amb llistes
 
-Les llistes proporcionen un **[iterador][]{target="_blank"}** i es poden recórrer en *bucle* de la mateixa manera que altres tipus de seqüències, utilitzant o 
+Les llistes proporcionen un **[iterador][]** i es poden recórrer en *bucle* de la mateixa manera que altres tipus de seqüències, utilitzant o 
 
 *   `#!py for item in <list>` o bé 
 
@@ -223,7 +223,7 @@ l6  ## Mostrarà  [[1, 2, 3], ['a', 'b', 'c']]
 Les llistes s'utilitzen sovint com a *piles* i *cues*, encara que la seva implementació fa que la preposició i la inserció sigui lenta. El mòdul de [col·leccions][]{taget="_blank"} ofereix la variant [deque][]{taget="_blank"}, optimitzada per a afegir-hi ràpidament des dels dos extrems, que s'implementa com una *llista doblement enllaçada*.
 
 
-!!!quote "Extret de [https://exercism.org/tracks/python/concepts/lists][]{target="_blank"}"
+!!!quote "Extret de [https://exercism.org/tracks/python/concepts/lists][]"
 
 
 [https://exercism.org/tracks/python/concepts/lists]:  https://exercism.org/tracks/python/concepts/lists "Extret de..."
