--- a/docs/esp32/esp32_001_b.md
+++ b/docs/esp32/esp32_001_b.md
@@ -48,7 +48,7 @@ Ara, si ja hem instal·lat i configurat el `Controlador CP210x` ja podem escolli
 
 Si no veiem els fitxers del dispositiui a l'esquerra, caldrà aturar el programa amb `Control C` des de la *consola*.
 
-Ara ja estem apunt de terballar amb el dispositiu des del nostre ordinador.
+Ara ja estem apunt de treballar amb el dispositiu des del nostre ordinador.
 
 [![thonny006.png][]][thonny006.png]{target="_blank"}
 
